# arklog

./: CMakeLists.txt  README.md  ROADMAP.md  hola.txt
include/arklog/: arklog.h  ring_buffer.h
src/: arklog.c  ring_buffer.c
tests/: logger_tests.c  logger_tests.h  ring_buffer_tests.c  ring_buffer_tests.h  tests.c  tests.h
